--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <!-- Hotjar Tracking Code for https://insinia.marcgavin.com -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2988495,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
     <meta charset="utf-8" />
     <title>Insinia</title>
     <base href="/" />
